// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QueryForm /> should render 1`] = `
.c1 {
  border: 0px;
  border-radius: 3px;
  font-size: 1em;
  font-weight: bold;
  font-family: azbuki;
  background-color: #EEC61F;
  color: #1C1311;
  padding: 15px 40px;
  cursor: pointer;
}

.c1:disabled {
  background-color: grey;
  opacity: 0.5;
  cursor: auto;
}

.c0 {
  margin: 50px 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.c0 p {
  max-width: 800px;
  text-indent: 50px;
  margin: 0px 20px;
}

.c0 input,
.c0 textarea {
  font-family: Verdana;
  font-size: 0.8em;
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 10px;
    white-space: nowrap;
  }
}

<div>
  <div
    class="c0"
  >
    <p>
      Изпрати запитване, като попълниш формата по-долу, след което ще получиш обаждане за детайли. Или директно се обади на телефон 0890932001.
    </p>
    <fieldset>
      <label>
        Име
      </label>
      <input
        alt="name-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Вашият имейл
      </label>
      <input
        alt="email-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Телефон за контакт
      </label>
      <input
        alt="phone-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Съобщение
      </label>
      <textarea
        alt="message-field"
      />
    </fieldset>
    <button
      class="c1"
      disabled=""
    >
      Изпрати
    </button>
  </div>
</div>
`;

exports[`<QueryForm /> should render as slim 1`] = `
.c1 {
  border: 0px;
  border-radius: 3px;
  font-size: 1em;
  font-weight: bold;
  font-family: azbuki;
  background-color: #EEC61F;
  color: #1C1311;
  padding: 15px 40px;
  cursor: pointer;
}

.c1:disabled {
  background-color: grey;
  opacity: 0.5;
  cursor: auto;
}

.c0 input,
.c0 textarea {
  font-family: Verdana;
  font-size: 0.8em;
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 10px;
    white-space: nowrap;
  }
}

<div>
  <div
    class="c0"
  >
    <fieldset>
      <label>
        Име
      </label>
      <input
        alt="name-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Вашият имейл
      </label>
      <input
        alt="email-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Телефон за контакт
      </label>
      <input
        alt="phone-field"
        type="text"
        value=""
      />
    </fieldset>
    <fieldset>
      <label>
        Съобщение
      </label>
      <textarea
        alt="message-field"
      />
    </fieldset>
    <button
      class="c1"
      disabled=""
    >
      Изпрати
    </button>
  </div>
</div>
`;
